test/types/records/recursive/generic-function.good
generic-function.chpl:8: error: record 'R' cannot contain a recursive field 'r' of type 'R'
