test/types/records/recursive/generic-function.bad
generic-function.chpl:2: In function 'foo':
generic-function.chpl:3: error: error while resolving type 'R(type int(64))'
generic-function.chpl:8: note: unable to resolve type of field 'r'
